--- a/mm/Makefile
+++ b/mm/Makefile
@@ -20,7 +20,7 @@ obj-y			:= filemap.o mempool.o oom_kill.o \
 			   util.o mmzone.o vmstat.o backing-dev.o \
 			   mm_init.o mmu_context.o percpu.o slab_common.o \
 			   compaction.o vmacache.o \
-			   interval_tree.o list_lru.o workingset.o \
+			   interval_tree.o list_lru.o workingset.o pm_page_alloc.o\
 			   debug.o $(mmu-y)
 
 obj-y += init-mm.o
